--- a/estilo/principal.css
+++ b/estilo/principal.css
@@ -5,10 +5,11 @@ div#cabeçalho {
     width: 100px;
     margin: auto;
     margin-bottom: -55px;
-    color: white;
+    color: rgb(219, 219, 219);
     font-family: sans-serif;
     text-align: center;
     padding-top: 10px;
+    text-shadow: 0px 0px 2px black;
 }
 
 
@@ -18,7 +19,10 @@ div#banner {
     border: 5px solid blue;
     margin: auto;
     margin-top: -105px;
-    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.174), black);
+    background-image: url('../imagem/YT-Full-m.jpg');
+    background-position: left top;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 
