--- a/estilo/principal.css
+++ b/estilo/principal.css
@@ -15,8 +15,9 @@ div#cabeçalho {
 
 
 div#banner {
+    border: none;
     height: 130px;
-    border: 5px solid blue;
+    border-radius: 5px;
     margin: auto;
     margin-top: -105px;
     background: url('../imagem/YT-Full-m.jpg') left top no-repeat;
@@ -50,17 +51,19 @@ header>a>img:hover {
 }
 
 nav {
-    background-image: linear-gradient(180deg, black, rgb(83, 83, 83));
+    background-image: linear-gradient(180deg, black, transparent);
+    border: none;
 }
 
 nav a {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 500;
     margin: 5px;
-    padding: 5px;
+    padding: 5px 5px 0px 5px;
     color: white;
     text-decoration: none;
     border-radius: 5px;
+    border-bottom: 2px solid black;
 }
 
 nav a:hover {
@@ -70,11 +73,21 @@ nav a:hover {
     transition-duration: 1s;
 }
 
+main {
+    border: none;
+    border-radius: 5px;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.464);
+}
+
+article {
+    border: none;
+}
 
 article img {
     margin: auto;
     width: 100%;
     border-radius: 5px;
+    border: none;
 }
 
 article> h1 {
@@ -91,6 +104,7 @@ aside {
     min-width: 320px;
     margin: auto;
     margin-top: 10px;
+    border: none;
 }
 
 aside>h2 {
@@ -109,6 +123,7 @@ aside li {
 aside>ul {
     list-style: circle inside;
     background-color: rgba(0, 0, 0, 0.359);
+    border-radius: 5px;
 }
 
 aside span:hover {
@@ -122,3 +137,21 @@ div>h2 {
     text-align: center;
 }
 
+footer {
+    text-align: center;
+    background-color: rgb(143, 143, 143);
+    border: none;
+    padding: 5px;
+    margin-top: 10px;
+}
+
+footer>p {
+    color: rgb(0, 0, 0);
+}
+
+footer a {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    text-shadow: 0px 0px 1px black;
+}
