--- a/estilo/perfil.css
+++ b/estilo/perfil.css
@@ -7,7 +7,10 @@
 }
 
 body {
-    background-color: rgb(158, 158, 158);;
+    width: 100vw;
+    height: 100vh;
+    background: lightgray url('../imagem/Zeus.jpg') no-repeat left center fixed;
+    background-size: 100% 100%;
 }
 
 
@@ -22,7 +25,7 @@ body {
 
 header img {
     width: 80px;
-    height: 40px;
+    height: 80px;
     border-radius: 50%;
 }
 
@@ -57,27 +60,4 @@ main {
     margin: auto;
     border: 5px solid black;
     margin-top: 10px;
-}
-
-h3 {
-    text-align: center;
-    font-size: 20px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-div.video {
-    background-color: rgb(15, 0, 91);
-    padding: 5px;
-    padding-bottom: 60%;
-    margin: 0px 0px 30px 0px;
-    position: relative;
-}
-
-div.video iframe {
-    left: 6%;
-    top: 10%; 
-    width: 87%;
-    height: 80%;
-    position: absolute;
 }
