--- a/estilo/principal.css
+++ b/estilo/principal.css
@@ -4,13 +4,11 @@
 div#banner {
     border: none;
     height: 130px;
-    border-radius: 5px;
     margin: auto;
     margin-top: -105px;
     background: url('../imagem/YT-Full-m.jpg') left top no-repeat;
     background-size: 100% 100%;
 }
-
 
 
 header {
@@ -38,9 +36,11 @@ header>a>img:hover {
     transition-duration: 1s;
 }
 
+
 nav {
-    background-image: linear-gradient(180deg, black, transparent);
+    background-image: linear-gradient(180deg, rgb(1, 1, 94), rgba(0, 0, 0, 0.445), rgba(0, 0, 0, 0));
     border: none;
+    padding: 10px;
 }
 
 nav a {
@@ -49,15 +49,12 @@ nav a {
     margin: 5px;
     padding: 5px 5px 0px 5px;
     color: white;
+    background-image: linear-gradient(180deg, rgb(1, 1, 94), rgba(0, 0, 0, 0.511));
     text-decoration: none;
     border-radius: 5px;
-    border-bottom: 2px solid black;
-    border-left: 2px solid black;
-    border-right: 2px solid black;
 }
 
 nav a:hover {
-    color: rgb(200, 200, 200);
     background-image: linear-gradient(180deg, black, transparent);
     border-radius: 5px;
     transition-duration: 1s;
