--- a/estilo/perfil.css
+++ b/estilo/perfil.css
@@ -40,6 +40,7 @@ nav {
 }
 
 nav a {
+    font-family: sans-serif;
     text-decoration: none;
     color: rgb(255, 255, 255);
     background-image: linear-gradient(180deg, black, rgba(0, 0, 0, 0.295));
@@ -51,7 +52,7 @@ nav a:hover {
     color: rgb(195, 195, 195);
     padding-top: 6px;
     border-radius: 5px;
-    transition-duration: 1s;
+    transition-duration: 0.5;
 }
 
 main {
