--- a/estilo/principal.css
+++ b/estilo/principal.css
@@ -36,17 +36,45 @@ header>a>img:hover {
     transition-duration: 1s;
 }
 
-
-nav {
+span#burguer {
+    display: inline-block;
+    margin-top: 5px;
     background-image: linear-gradient(180deg, rgb(1, 1, 94), rgba(0, 0, 0, 0.445), rgba(0, 0, 0, 0));
-    border: none;
-    padding: 10px;
+    width: 100px;
+    text-align: center;
+    border-radius: 10px;
 }
 
-nav a {
+span#burguer:hover {
+    background-image: linear-gradient(180deg, rgb(132, 132, 212), rgba(0, 0, 0, 0.445), rgba(95, 91, 91, 0.41));
+    text-shadow: 0px 0px 2px white;
+    cursor: pointer;
+}
+
+nav {
+    border-radius: 5px;
+    border: none;
+    padding: 10px;
+    display: none;
+    background-color: rgba(211, 211, 211, 0.496);
+    width: 300px;
+    height: 90px;
+}
+
+nav>ul {
+    list-style: none;
+    margin-left: -48px;
+    margin-top: -10px;
+}
+
+nav>ul>li {
+    margin-top: 10px;
+}
+
+nav>ul>li>a {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 500;
-    margin: 5px;
+    margin-top: 5px;
     padding: 5px 5px 0px 5px;
     color: white;
     background-image: linear-gradient(180deg, rgb(1, 1, 94), rgba(0, 0, 0, 0.511));
@@ -54,19 +82,22 @@ nav a {
     border-radius: 5px;
 }
 
-nav a:hover {
+nav>ul>li>a:hover {
     background-image: linear-gradient(180deg, black, transparent);
     border-radius: 5px;
     transition-duration: 1s;
 }
 
 main {
+    padding: 10px;
+    background-color: rgba(240, 248, 255, 0.682);
     border: none;
     border-radius: 5px;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.464);
 }
 
 article {
+    padding: 10px;
     border: none;
 }
 
