--- a/estilo/principal.css
+++ b/estilo/principal.css
@@ -1,5 +1,13 @@
 @charset "UTF-8";
 
+* {
+    padding: 0px;
+    margin: 0px;
+}
+
+body, html {
+    width: 100%;
+}
 
 div#banner {
     border: none;
@@ -38,11 +46,10 @@ header>a>img:hover {
 
 span#burguer {
     display: inline-block;
-    margin-top: 5px;
     background-image: linear-gradient(180deg, rgb(1, 1, 94), rgba(0, 0, 0, 0.445), rgba(0, 0, 0, 0));
     width: 100px;
     text-align: center;
-    border-radius: 10px;
+    border-radius: 0px 10px 10px 0px;
 }
 
 span#burguer:hover {
@@ -52,19 +59,19 @@ span#burguer:hover {
 }
 
 nav {
-    border-radius: 5px;
+    border-radius: 5px 100px 100px 5px;
     border: none;
     padding: 10px;
     display: none;
     background-color: rgba(211, 211, 211, 0.496);
-    width: 300px;
-    height: 90px;
+    width: 150px;
+    height: 70px;
 }
 
 nav>ul {
     list-style: none;
-    margin-left: -48px;
-    margin-top: -10px;
+    margin-left: 0px;
+    margin-top: -13px;
 }
 
 nav>ul>li {
@@ -89,6 +96,8 @@ nav>ul>li>a:hover {
 }
 
 main {
+    margin: auto;
+    margin-top: 10px;
     padding: 10px;
     background-color: rgba(240, 248, 255, 0.682);
     border: none;
@@ -112,10 +121,32 @@ article img {
 article> h1 {
     text-align: center;
     color: white;
+    text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.681);
+    margin-bottom: 10px;
 }
 
 article p {
     text-align: justify;
+    text-indent: 20px;
+    margin-bottom: 10px;
+}
+
+div.foto {
+    margin: auto;
+    max-width: 530px;
+    min-width: 320px;
+}
+
+div#resumo {
+    margin: auto;
+    background-color: rgba(131, 131, 131, 0.553);
+    width: 320px;
+    border-radius: 5px;
+    margin-top: 5px;
+}
+
+div#resumo p {
+    text-align: center;
 }
 
 aside {
@@ -136,10 +167,12 @@ aside a {
 }
 
 aside li {
+    margin-left: 5px;
     margin-top: 5px;
 }
 
 aside>ul {
+    padding: 5px;
     list-style: circle inside;
     background-color: rgba(0, 0, 0, 0.359);
     border-radius: 5px;
@@ -151,6 +184,7 @@ aside span:hover {
     font-weight: bold;
     transition-duration: 1s;
     border-radius: 5px;
+    padding: 2px;
 }
 
 div>h2 {
