--- a/estilo/principal.css
+++ b/estilo/principal.css
@@ -46,17 +46,20 @@ header>a>img:hover {
 
 span#burguer {
     display: inline-block;
-    background-image: linear-gradient(180deg, rgb(1, 1, 94), rgba(0, 0, 0, 0.445), rgba(0, 0, 0, 0));
+    background-color: rgb(1, 1, 94);
+    color: white;
     width: 100px;
     text-align: center;
     border-radius: 0px 10px 10px 0px;
 }
 
 span#burguer:hover {
-    background-image: linear-gradient(180deg, rgb(132, 132, 212), rgba(0, 0, 0, 0.445), rgba(95, 91, 91, 0.41));
+    background-color: white;
+    color: black;
     text-shadow: 0px 0px 2px white;
     cursor: pointer;
 }
+
 
 nav {
     border-radius: 5px 100px 100px 5px;
@@ -84,13 +87,14 @@ nav>ul>li>a {
     margin-top: 5px;
     padding: 5px 5px 0px 5px;
     color: white;
-    background-image: linear-gradient(180deg, rgb(1, 1, 94), rgba(0, 0, 0, 0.511));
+    background-color: rgb(1, 1, 94);
     text-decoration: none;
     border-radius: 5px;
 }
 
 nav>ul>li>a:hover {
-    background-image: linear-gradient(180deg, black, transparent);
+    background-color: white;
+    color: black;
     border-radius: 5px;
     transition-duration: 1s;
 }
@@ -209,3 +213,4 @@ footer a {
     font-weight: bold;
     text-shadow: 0px 0px 1px black;
 }
+
