adicionado botao menu

--- a/estilo/mobilefirst.css
+++ b/estilo/mobilefirst.css
@@ -16,7 +16,8 @@ body {
 }
 
 div#perfil {
-    margin-top: -200px;
+    margin-top: -195px;
+    margin-left: 5px;
     width: 0px;
     height: 0px;
 }
@@ -44,21 +45,34 @@ div#perfil>img:hover {
 
 header>div#banner {
     height: 200px;
-    background: blue url('/imagem/YT-Full-p.jpg') no-repeat;
+    background: blue url('../imagem/YT-Full-p.jpg') no-repeat;
     background-size: cover;
     background-position: left top;
 
 }
 
+div#bot {
+    cursor: pointer;
+    margin-top: 200px;
+    width: 0px;
+}
+
 menu#menu {
-    display: block;
+    display: none;
+    flex-direction: column;
+    
+
+    width: 100%;
+    height: 105px;
+    margin-top: 0px;
+    
 }
 
 menu#menu>ul {
-    display: flex;
     list-style-type: none;
-    margin-top: 200px;
+    
     background-color: rgb(2, 2, 101);
+    border-radius: 5px 50px 5px 5px;
 }
 
 li.nav {
@@ -81,6 +95,18 @@ li.nav:hover {
 
     transform: scale(90%, 90%);
     transition: transform .5s;
+}
+
+li#ca {
+    width: 150px;
+}
+
+li#rd {
+    width: 200px;
+}
+
+li#cr {
+    width: 250px;
 }
 
 main {
@@ -127,6 +153,3 @@ footer>p>a {
     font-weight: bold;
 }
 
-span#bot {
-    cursor: pointer;
-}
